feat: implement functionality - like and friend