@@ -4,12 +4,17 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.dto.UserDto;
 import ru.yandex.practicum.filmorate.model.entity.User;
 import ru.yandex.practicum.filmorate.model.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -52,7 +57,7 @@ public class UserService implements UserServiceInterface {
         log.debug("Запрос всех пользователей");
         return userStorage.findAll().stream()
                 .map(userMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -63,10 +68,101 @@ public class UserService implements UserServiceInterface {
         userStorage.deleteById(id);
     }
 
+    @Override
+    public void addFriend(Integer userId, Integer friendId) {
+        log.debug("Добавление в друзья: userId={}, friendId={}", userId, friendId);
+
+        User user = getUserById(userId);
+        User friend = getUserById(friendId);
+
+        if (userId.equals(friendId)) {
+            log.warn("Попытка добавить самого себя в друзья: userId={}", userId);
+            throw new ValidationException("Нельзя добавить самого себя в друзья");
+        }
+
+        boolean userAdded = user.getFriends().add(friendId);
+        boolean friendAdded = friend.getFriends().add(userId);
+
+        if (userAdded || friendAdded) {
+            userStorage.update(user);
+            userStorage.update(friend);
+            log.info("Пользователи стали друзьями: {} <-> {}", userId, friendId);
+        } else {
+            log.debug("Пользователи уже являются друзьями: {} <-> {}", userId, friendId);
+        }
+    }
+
+    @Override
+    public void removeFriend(Integer userId, Integer friendId) {
+        log.debug("Удаление из друзей: userId={}, friendId={}", userId, friendId);
+
+        User user = getUserById(userId);
+        User friend = getUserById(friendId);
+
+        boolean userRemoved = user.getFriends().remove(friendId);
+        boolean friendRemoved = friend.getFriends().remove(userId);
+
+        if (userRemoved || friendRemoved) {
+            userStorage.update(user);
+            userStorage.update(friend);
+            log.info("Пользователи перестали быть друзьями: {} <-> {}", userId, friendId);
+        } else {
+            log.warn("Пользователи не являются друзьями: {} <-> {}", userId, friendId);
+            throw new NotFoundException("Пользователи не являются друзьями");
+        }
+    }
+
+    @Override
+    public List<UserDto> getFriends(Integer userId) {
+        log.debug("Получение списка друзей: userId={}", userId);
+
+        User user = getUserById(userId);
+
+        if (user.getFriends().isEmpty()) {
+            log.debug("У пользователя нет друзей: userId={}", userId);
+            return List.of();
+        }
+
+        return user.getFriends().stream()
+                .map(userStorage::findById)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .map(userMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<UserDto> getCommonFriends(Integer userId, Integer otherId) {
+        log.debug("Получение общих друзей: userId={}, otherId={}", userId, otherId);
+
+        User user = getUserById(userId);
+        User other = getUserById(otherId);
+
+        Set<Integer> commonFriends = new HashSet<>(user.getFriends());
+        commonFriends.retainAll(other.getFriends());
+
+        if (commonFriends.isEmpty()) {
+            log.debug("Нет общих друзей у пользователей: {} и {}", userId, otherId);
+            return List.of();
+        }
+
+        return commonFriends.stream()
+                .map(userStorage::findById)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .map(userMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
     private void normalizeName(User user) {
         if (user.getName() == null || user.getName().isBlank()) {
             user.setName(user.getLogin());
             log.debug("Имя пользователя заменено на логин: {}", user.getLogin());
         }
+    }
+
+    private User getUserById(Integer id) {
+        return userStorage.findById(id)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + id + " не найден"));
     }
 }
